Fix icon alignment

--- a/src/scss/includes/components/block.scss
+++ b/src/scss/includes/components/block.scss
@@ -9,6 +9,7 @@
     margin-top: $spacing-xs;
     margin-right: $spacing-s;
     color: $action-blue-base;
+    align-self: flex-start;
   }
 
   &-content {
